src/mem/slicc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> file
Rule 1     file -> decls
Rule 2     empty -> <empty>
Rule 3     decls -> declsx
Rule 4     declsx -> decl declsx
Rule 5     declsx -> empty
Rule 6     decl -> PROTOCOL STRING exprs SEMI
Rule 7     decl -> INCLUDE STRING SEMI
Rule 8     decl -> MACHINE ( enumeration ) : obj_decls { decls }
Rule 9     decl -> MACHINE ( enumeration pairs ) : obj_decls { decls }
Rule 10    decl -> ACTION ( ident pairs ) statements
Rule 11    decl -> IN_PORT ( ident , type , var pairs ) statements
Rule 12    decl -> OUT_PORT ( ident , type , var pairs ) SEMI
Rule 13    decl -> TRANS ( idents , idents , ident_or_star ) idents
Rule 14    decl -> TRANS ( idents , idents ) idents
Rule 15    decl -> TRANS ( idents , idents , ident_or_star ) idents idents
Rule 16    decl -> TRANS ( idents , idents ) idents idents
Rule 17    decl -> EXTERN_TYPE ( type pairs ) SEMI
Rule 18    decl -> GLOBAL ( type pairs ) { type_members }
Rule 19    decl -> STRUCT ( type pairs ) { type_members }
Rule 20    decl -> ENUM ( type pairs ) { type_enums }
Rule 21    decl -> STATE_DECL ( type pairs ) { type_states }
Rule 22    obj_decls -> obj_decl obj_decls
Rule 23    obj_decls -> empty
Rule 24    type_members -> type_member type_members
Rule 25    type_members -> empty
Rule 26    type_member -> obj_decl
Rule 27    type_member -> func_decl
Rule 28    type_member -> func_def
Rule 29    decl -> obj_decl
Rule 30    obj_decl -> type ident pairs SEMI
Rule 31    obj_decl -> type STAR ident pairs SEMI
Rule 32    obj_decl -> type ident ASSIGN expr SEMI
Rule 33    obj_decl -> type STAR ident ASSIGN expr SEMI
Rule 34    decl -> func_decl
Rule 35    func_decl -> void ident ( params ) pairs SEMI
Rule 36    func_decl -> type ident ( params ) pairs SEMI
Rule 37    func_decl -> void ident ( types ) pairs SEMI
Rule 38    func_decl -> type ident ( types ) pairs SEMI
Rule 39    decl -> func_def
Rule 40    func_def -> void ident ( params ) pairs statements
Rule 41    func_def -> type ident ( params ) pairs statements
Rule 42    type_enums -> type_enum type_enums
Rule 43    type_enums -> empty
Rule 44    type_enum -> ident pairs SEMI
Rule 45    type_states -> type_state type_states
Rule 46    type_states -> empty
Rule 47    type_state -> ident , enumeration pairs SEMI
Rule 48    params -> param , params
Rule 49    params -> param
Rule 50    params -> empty
Rule 51    param -> type ident
Rule 52    param -> type STAR ident
Rule 53    param -> type AMP ident
Rule 54    param -> CONST type AMP ident
Rule 55    param -> type STAR ident ASSIGN STRING
Rule 56    param -> type ident ASSIGN NUMBER
Rule 57    param -> type ident ASSIGN LIT_BOOL
Rule 58    param -> type ident ASSIGN STRING
Rule 59    types -> type , types
Rule 60    types -> type
Rule 61    types -> empty
Rule 62    typestr -> typestr DOUBLE_COLON ident
Rule 63    typestr -> ident
Rule 64    type -> typestr
Rule 65    void -> VOID
Rule 66    idents -> { identx }
Rule 67    idents -> ident
Rule 68    identx -> ident SEMI identx
Rule 69    identx -> ident , identx
Rule 70    identx -> ident identx
Rule 71    identx -> empty
Rule 72    ident -> IDENT
Rule 73    ident_or_star -> ident
Rule 74    ident_or_star -> STAR
Rule 75    pairs -> , pairsx
Rule 76    pairs -> empty
Rule 77    pairsx -> pair , pairsx
Rule 78    pairsx -> pair
Rule 79    pair -> ident = STRING
Rule 80    pair -> ident = ident
Rule 81    pair -> ident = NUMBER
Rule 82    pair -> STRING
Rule 83    statements -> { statements_inner }
Rule 84    statements -> { }
Rule 85    statements_inner -> statement statements_inner
Rule 86    statements_inner -> statement
Rule 87    exprs -> expr , exprs
Rule 88    exprs -> expr
Rule 89    exprs -> empty
Rule 90    statement -> expr SEMI
Rule 91    statement -> expr ASSIGN expr SEMI
Rule 92    statement -> ENQUEUE ( var , type ) statements
Rule 93    statement -> ENQUEUE ( var , type , expr ) statements
Rule 94    statement -> ENQUEUE ( var , type , expr , expr ) statements
Rule 95    statement -> DEFER_ENQUEUEING ( var , type ) statements
Rule 96    statement -> STALL_AND_WAIT ( var , var ) SEMI
Rule 97    statement -> WAKEUP_PORT ( var , var ) SEMI
Rule 98    statement -> PEEK ( var , type pairs ) statements
Rule 99    statement -> CHECK_ALLOCATE ( var ) SEMI
Rule 100   statement -> CHECK_NEXT_CYCLE ( ) SEMI
Rule 101   statement -> CHECK_STOP_SLOTS ( var , STRING , STRING ) SEMI
Rule 102   statement -> CHECK_PROBE ( var , var ) SEMI
Rule 103   statement -> RETURN expr SEMI
Rule 104   statement -> if_statement
Rule 105   if_statement -> IF ( expr ) statements
Rule 106   if_statement -> IF ( expr ) statements ELSE statements
Rule 107   if_statement -> IF ( expr ) statements ELSE if_statement
Rule 108   aexpr -> STATIC_CAST ( type , expr )
Rule 109   aexpr -> STATIC_CAST ( type , STRING , expr )
Rule 110   aexpr -> var
Rule 111   aexpr -> type ident
Rule 112   aexpr -> literal
Rule 113   aexpr -> enumeration
Rule 114   aexpr -> ident ( exprs )
Rule 115   aexpr -> NEW type
Rule 116   aexpr -> OOD
Rule 117   aexpr -> aexpr DOT ident
Rule 118   aexpr -> aexpr DOT ident ( exprs )
Rule 119   aexpr -> aexpr [ exprs ]
Rule 120   aexpr -> type DOUBLE_COLON ident ( exprs )
Rule 121   expr -> aexpr
Rule 122   expr -> expr STAR expr
Rule 123   expr -> expr SLASH expr
Rule 124   expr -> expr MOD expr
Rule 125   expr -> expr PLUS expr
Rule 126   expr -> expr DASH expr
Rule 127   expr -> expr LT expr
Rule 128   expr -> expr GT expr
Rule 129   expr -> expr LE expr
Rule 130   expr -> expr GE expr
Rule 131   expr -> expr EQ expr
Rule 132   expr -> expr NE expr
Rule 133   expr -> expr AND expr
Rule 134   expr -> expr OR expr
Rule 135   expr -> expr RIGHTSHIFT expr
Rule 136   expr -> expr LEFTSHIFT expr
Rule 137   expr -> NOT expr
Rule 138   expr -> INCR expr
Rule 139   expr -> DECR expr
Rule 140   expr -> DASH expr
Rule 141   aexpr -> ( expr )
Rule 142   aexpr -> IS_VALID ( expr )
Rule 143   aexpr -> IS_INVALID ( expr )
Rule 144   literal -> STRING
Rule 145   literal -> NUMBER
Rule 146   literal -> FLOATNUMBER
Rule 147   literal -> LIT_BOOL
Rule 148   enumeration -> ident : ident
Rule 149   var -> ident

Terminals, with rules where they appear

(                    : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 35 36 37 38 40 41 92 93 94 95 96 97 98 99 100 101 102 105 106 107 108 109 114 118 120 141 142 143
)                    : 8 9 10 11 12 13 14 15 16 17 18 19 20 21 35 36 37 38 40 41 92 93 94 95 96 97 98 99 100 101 102 105 106 107 108 109 114 118 120 141 142 143
,                    : 11 11 12 12 13 13 14 15 15 16 47 48 59 69 75 77 87 92 93 93 94 94 94 95 96 97 98 101 101 102 108 109 109
:                    : 8 9 148
=                    : 79 80 81
ACTION               : 10
AMP                  : 53 54
AND                  : 133
ASSIGN               : 32 33 55 56 57 58 91
CHECK_ALLOCATE       : 99
CHECK_NEXT_CYCLE     : 100
CHECK_PROBE          : 102
CHECK_STOP_SLOTS     : 101
CONST                : 54
DASH                 : 126 140
DECR                 : 139
DEFER_ENQUEUEING     : 95
DOT                  : 117 118
DOUBLE_COLON         : 62 120
ELSE                 : 106 107
ENQUEUE              : 92 93 94
ENUM                 : 20
EQ                   : 131
EXTERN_TYPE          : 17
FLOATNUMBER          : 146
GE                   : 130
GLOBAL               : 18
GT                   : 128
IDENT                : 72
IF                   : 105 106 107
INCLUDE              : 7
INCR                 : 138
IN_PORT              : 11
IS_INVALID           : 143
IS_VALID             : 142
LE                   : 129
LEFTSHIFT            : 136
LIT_BOOL             : 57 147
LT                   : 127
MACHINE              : 8 9
MOD                  : 124
NE                   : 132
NEW                  : 115
NOT                  : 137
NUMBER               : 56 81 145
OOD                  : 116
OR                   : 134
OUT_PORT             : 12
PEEK                 : 98
PLUS                 : 125
PROTOCOL             : 6
RETURN               : 103
RIGHTSHIFT           : 135
SEMI                 : 6 7 12 17 30 31 32 33 35 36 37 38 44 47 68 90 91 96 97 99 100 101 102 103
SLASH                : 123
STALL_AND_WAIT       : 96
STAR                 : 31 33 52 55 74 122
STATE_DECL           : 21
STATIC_CAST          : 108 109
STRING               : 6 7 55 58 79 82 101 101 109 144
STRUCT               : 19
TRANS                : 13 14 15 16
VOID                 : 65
WAKEUP_PORT          : 97
[                    : 119
]                    : 119
error                : 
{                    : 8 9 18 19 20 21 66 83 84
}                    : 8 9 18 19 20 21 66 83 84

Nonterminals, with rules where they appear

aexpr                : 117 118 119 121
decl                 : 4
decls                : 1 8 9
declsx               : 3 4
empty                : 5 23 25 43 46 50 61 71 76 89
enumeration          : 8 9 47 113
expr                 : 32 33 87 88 90 91 91 93 94 94 103 105 106 107 108 109 122 122 123 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 138 139 140 141 142 143
exprs                : 6 87 114 118 119 120
file                 : 0
func_decl            : 27 34
func_def             : 28 39
ident                : 10 11 12 30 31 32 33 35 36 37 38 40 41 44 47 51 52 53 54 55 56 57 58 62 63 67 68 69 70 73 79 80 80 81 111 114 117 118 120 148 148 149
ident_or_star        : 13 15
idents               : 13 13 13 14 14 14 15 15 15 15 16 16 16 16
identx               : 66 68 69 70
if_statement         : 104 107
literal              : 112
obj_decl             : 22 26 29
obj_decls            : 8 9 22
pair                 : 77 78
pairs                : 9 10 11 12 17 18 19 20 21 30 31 35 36 37 38 40 41 44 47 98
pairsx               : 75 77
param                : 48 49
params               : 35 36 40 41 48
statement            : 85 86
statements           : 10 11 40 41 92 93 94 95 98 105 106 106 107
statements_inner     : 83 85
type                 : 11 12 17 18 19 20 21 30 31 32 33 36 38 41 51 52 53 54 55 56 57 58 59 60 92 93 94 95 98 108 109 111 115 120
type_enum            : 42
type_enums           : 20 42
type_member          : 24
type_members         : 18 19 24
type_state           : 45
type_states          : 21 45
types                : 37 38 59
typestr              : 62 64
var                  : 11 12 92 93 94 95 96 96 97 97 98 99 101 102 102 110
void                 : 35 37 40

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . decls
    (3) decls -> . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING exprs SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( enumeration ) : obj_decls { decls }
    (9) decl -> . MACHINE ( enumeration pairs ) : obj_decls { decls }
    (10) decl -> . ACTION ( ident pairs ) statements
    (11) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (12) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (13) decl -> . TRANS ( idents , idents , ident_or_star ) idents
    (14) decl -> . TRANS ( idents , idents ) idents
    (15) decl -> . TRANS ( idents , idents , ident_or_star ) idents idents
    (16) decl -> . TRANS ( idents , idents ) idents idents
    (17) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (18) decl -> . GLOBAL ( type pairs ) { type_members }
    (19) decl -> . STRUCT ( type pairs ) { type_members }
    (20) decl -> . ENUM ( type pairs ) { type_enums }
    (21) decl -> . STATE_DECL ( type pairs ) { type_states }
    (29) decl -> . obj_decl
    (34) decl -> . func_decl
    (39) decl -> . func_def
    (2) empty -> .
    (30) obj_decl -> . type ident pairs SEMI
    (31) obj_decl -> . type STAR ident pairs SEMI
    (32) obj_decl -> . type ident ASSIGN expr SEMI
    (33) obj_decl -> . type STAR ident ASSIGN expr SEMI
    (35) func_decl -> . void ident ( params ) pairs SEMI
    (36) func_decl -> . type ident ( params ) pairs SEMI
    (37) func_decl -> . void ident ( types ) pairs SEMI
    (38) func_decl -> . type ident ( types ) pairs SEMI
    (40) func_def -> . void ident ( params ) pairs statements
    (41) func_def -> . type ident ( params ) pairs statements
    (64) type -> . typestr
    (65) void -> . VOID
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    PROTOCOL        shift and go to state 6
    INCLUDE         shift and go to state 7
    MACHINE         shift and go to state 8
    ACTION          shift and go to state 9
    IN_PORT         shift and go to state 11
    OUT_PORT        shift and go to state 13
    TRANS           shift and go to state 14
    EXTERN_TYPE     shift and go to state 15
    GLOBAL          shift and go to state 16
    STRUCT          shift and go to state 17
    ENUM            shift and go to state 18
    STATE_DECL      shift and go to state 19
    $end            reduce using rule 2 (empty -> .)
    VOID            shift and go to state 25
    IDENT           shift and go to state 26

    file                           shift and go to state 1
    decls                          shift and go to state 2
    declsx                         shift and go to state 3
    decl                           shift and go to state 4
    empty                          shift and go to state 5
    ident                          shift and go to state 10
    type                           shift and go to state 12
    obj_decl                       shift and go to state 20
    func_decl                      shift and go to state 21
    func_def                       shift and go to state 22
    void                           shift and go to state 23
    typestr                        shift and go to state 24

state 1

    (0) S' -> file .



state 2

    (1) file -> decls .

    $end            reduce using rule 1 (file -> decls .)


state 3

    (3) decls -> declsx .

    $end            reduce using rule 3 (decls -> declsx .)
    }               reduce using rule 3 (decls -> declsx .)


state 4

    (4) declsx -> decl . declsx
    (4) declsx -> . decl declsx
    (5) declsx -> . empty
    (6) decl -> . PROTOCOL STRING exprs SEMI
    (7) decl -> . INCLUDE STRING SEMI
    (8) decl -> . MACHINE ( enumeration ) : obj_decls { decls }
    (9) decl -> . MACHINE ( enumeration pairs ) : obj_decls { decls }
    (10) decl -> . ACTION ( ident pairs ) statements
    (11) decl -> . IN_PORT ( ident , type , var pairs ) statements
    (12) decl -> . OUT_PORT ( ident , type , var pairs ) SEMI
    (13) decl -> . TRANS ( idents , idents , ident_or_star ) idents
    (14) decl -> . TRANS ( idents , idents ) idents
    (15) decl -> . TRANS ( idents , idents , ident_or_star ) idents idents
    (16) decl -> . TRANS ( idents , idents ) idents idents
    (17) decl -> . EXTERN_TYPE ( type pairs ) SEMI
    (18) decl -> . GLOBAL ( type pairs ) { type_members }
    (19) decl -> . STRUCT ( type pairs ) { type_members }
    (20) decl -> . ENUM ( type pairs ) { type_enums }
    (21) decl -> . STATE_DECL ( type pairs ) { type_states }
    (29) decl -> . obj_decl
    (34) decl -> . func_decl
    (39) decl -> . func_def
    (2) empty -> .
    (30) obj_decl -> . type ident pairs SEMI
    (31) obj_decl -> . type STAR ident pairs SEMI
    (32) obj_decl -> . type ident ASSIGN expr SEMI
    (33) obj_decl -> . type STAR ident ASSIGN expr SEMI
    (35) func_decl -> . void ident ( params ) pairs SEMI
    (36) func_decl -> . type ident ( params ) pairs SEMI
    (37) func_decl -> . void ident ( types ) pairs SEMI
    (38) func_decl -> . type ident ( types ) pairs SEMI
    (40) func_def -> . void ident ( params ) pairs statements
    (41) func_def -> . type ident ( params ) pairs statements
    (64) type -> . typestr
    (65) void -> . VOID
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident
    (72) ident -> . IDENT

    PROTOCOL        shift and go to state 6
    INCLUDE         shift and go to state 7
    MACHINE         shift and go to state 8
    ACTION          shift and go to state 9
    IN_PORT         shift and go to state 11
    OUT_PORT        shift and go to state 13
    TRANS           shift and go to state 14
    EXTERN_TYPE     shift and go to state 15
    GLOBAL          shift and go to state 16
    STRUCT          shift and go to state 17
    ENUM            shift and go to state 18
    STATE_DECL      shift and go to state 19
    $end            reduce using rule 2 (empty -> .)
    }               reduce using rule 2 (empty -> .)
    VOID            shift and go to state 25
    IDENT           shift and go to state 26

    decl                           shift and go to state 4
    declsx                         shift and go to state 27
    empty                          shift and go to state 5
    ident                          shift and go to state 10
    type                           shift and go to state 12
    obj_decl                       shift and go to state 20
    func_decl                      shift and go to state 21
    func_def                       shift and go to state 22
    void                           shift and go to state 23
    typestr                        shift and go to state 24

state 5

    (5) declsx -> empty .

    $end            reduce using rule 5 (declsx -> empty .)
    }               reduce using rule 5 (declsx -> empty .)


state 6

    (6) decl -> PROTOCOL . STRING exprs SEMI

    STRING          shift and go to state 28


state 7

    (7) decl -> INCLUDE . STRING SEMI

    STRING          shift and go to state 29


state 8

    (8) decl -> MACHINE . ( enumeration ) : obj_decls { decls }
    (9) decl -> MACHINE . ( enumeration pairs ) : obj_decls { decls }

    (               shift and go to state 30


state 9

    (10) decl -> ACTION . ( ident pairs ) statements

    (               shift and go to state 31


state 10

    (63) typestr -> ident .

    DOUBLE_COLON    reduce using rule 63 (typestr -> ident .)
    STAR            reduce using rule 63 (typestr -> ident .)
    IDENT           reduce using rule 63 (typestr -> ident .)
    ,               reduce using rule 63 (typestr -> ident .)
    )               reduce using rule 63 (typestr -> ident .)
    DOT             reduce using rule 63 (typestr -> ident .)
    [               reduce using rule 63 (typestr -> ident .)
    SLASH           reduce using rule 63 (typestr -> ident .)
    MOD             reduce using rule 63 (typestr -> ident .)
    PLUS            reduce using rule 63 (typestr -> ident .)
    DASH            reduce using rule 63 (typestr -> ident .)
    LT              reduce using rule 63 (typestr -> ident .)
    GT              reduce using rule 63 (typestr -> ident .)
    LE              reduce using rule 63 (typestr -> ident .)
    GE              reduce using rule 63 (typestr -> ident .)
    EQ              reduce using rule 63 (typestr -> ident .)
    NE              reduce using rule 63 (typestr -> ident .)
    AND             reduce using rule 63 (typestr -> ident .)
    OR              reduce using rule 63 (typestr -> ident .)
    RIGHTSHIFT      reduce using rule 63 (typestr -> ident .)
    LEFTSHIFT       reduce using rule 63 (typestr -> ident .)
    SEMI            reduce using rule 63 (typestr -> ident .)
    ]               reduce using rule 63 (typestr -> ident .)
    ASSIGN          reduce using rule 63 (typestr -> ident .)
    AMP             reduce using rule 63 (typestr -> ident .)


state 11

    (11) decl -> IN_PORT . ( ident , type , var pairs ) statements

    (               shift and go to state 32


state 12

    (30) obj_decl -> type . ident pairs SEMI
    (31) obj_decl -> type . STAR ident pairs SEMI
    (32) obj_decl -> type . ident ASSIGN expr SEMI
    (33) obj_decl -> type . STAR ident ASSIGN expr SEMI
    (36) func_decl -> type . ident ( params ) pairs SEMI
    (38) func_decl -> type . ident ( types ) pairs SEMI
    (41) func_def -> type . ident ( params ) pairs statements
    (72) ident -> . IDENT

    STAR            shift and go to state 34
    IDENT           shift and go to state 26

    ident                          shift and go to state 33

state 13

    (12) decl -> OUT_PORT . ( ident , type , var pairs ) SEMI

    (               shift and go to state 35


state 14

    (13) decl -> TRANS . ( idents , idents , ident_or_star ) idents
    (14) decl -> TRANS . ( idents , idents ) idents
    (15) decl -> TRANS . ( idents , idents , ident_or_star ) idents idents
    (16) decl -> TRANS . ( idents , idents ) idents idents

    (               shift and go to state 36


state 15

    (17) decl -> EXTERN_TYPE . ( type pairs ) SEMI

    (               shift and go to state 37


state 16

    (18) decl -> GLOBAL . ( type pairs ) { type_members }

    (               shift and go to state 38


state 17

    (19) decl -> STRUCT . ( type pairs ) { type_members }

    (               shift and go to state 39


state 18

    (20) decl -> ENUM . ( type pairs ) { type_enums }

    (               shift and go to state 40


state 19

    (21) decl -> STATE_DECL . ( type pairs ) { type_states }

    (               shift and go to state 41


state 20

    (29) decl -> obj_decl .

    PROTOCOL        reduce using rule 29 (decl -> obj_decl .)
    INCLUDE         reduce using rule 29 (decl -> obj_decl .)
    MACHINE         reduce using rule 29 (decl -> obj_decl .)
    ACTION          reduce using rule 29 (decl -> obj_decl .)
    IN_PORT         reduce using rule 29 (decl -> obj_decl .)
    OUT_PORT        reduce using rule 29 (decl -> obj_decl .)
    TRANS           reduce using rule 29 (decl -> obj_decl .)
    EXTERN_TYPE     reduce using rule 29 (decl -> obj_decl .)
    GLOBAL          reduce using rule 29 (decl -> obj_decl .)
    STRUCT          reduce using rule 29 (decl -> obj_decl .)
    ENUM            reduce using rule 29 (decl -> obj_decl .)
    STATE_DECL      reduce using rule 29 (decl -> obj_decl .)
    VOID            reduce using rule 29 (decl -> obj_decl .)
    IDENT           reduce using rule 29 (decl -> obj_decl .)
    $end            reduce using rule 29 (decl -> obj_decl .)
    }               reduce using rule 29 (decl -> obj_decl .)


state 21

    (34) decl -> func_decl .

    PROTOCOL        reduce using rule 34 (decl -> func_decl .)
    INCLUDE         reduce using rule 34 (decl -> func_decl .)
    MACHINE         reduce using rule 34 (decl -> func_decl .)
    ACTION          reduce using rule 34 (decl -> func_decl .)
    IN_PORT         reduce using rule 34 (decl -> func_decl .)
    OUT_PORT        reduce using rule 34 (decl -> func_decl .)
    TRANS           reduce using rule 34 (decl -> func_decl .)
    EXTERN_TYPE     reduce using rule 34 (decl -> func_decl .)
    GLOBAL          reduce using rule 34 (decl -> func_decl .)
    STRUCT          reduce using rule 34 (decl -> func_decl .)
    ENUM            reduce using rule 34 (decl -> func_decl .)
    STATE_DECL      reduce using rule 34 (decl -> func_decl .)
    VOID            reduce using rule 34 (decl -> func_decl .)
    IDENT           reduce using rule 34 (decl -> func_decl .)
    $end            reduce using rule 34 (decl -> func_decl .)
    }               reduce using rule 34 (decl -> func_decl .)


state 22

    (39) decl -> func_def .

    PROTOCOL        reduce using rule 39 (decl -> func_def .)
    INCLUDE         reduce using rule 39 (decl -> func_def .)
    MACHINE         reduce using rule 39 (decl -> func_def .)
    ACTION          reduce using rule 39 (decl -> func_def .)
    IN_PORT         reduce using rule 39 (decl -> func_def .)
    OUT_PORT        reduce using rule 39 (decl -> func_def .)
    TRANS           reduce using rule 39 (decl -> func_def .)
    EXTERN_TYPE     reduce using rule 39 (decl -> func_def .)
    GLOBAL          reduce using rule 39 (decl -> func_def .)
    STRUCT          reduce using rule 39 (decl -> func_def .)
    ENUM            reduce using rule 39 (decl -> func_def .)
    STATE_DECL      reduce using rule 39 (decl -> func_def .)
    VOID            reduce using rule 39 (decl -> func_def .)
    IDENT           reduce using rule 39 (decl -> func_def .)
    $end            reduce using rule 39 (decl -> func_def .)
    }               reduce using rule 39 (decl -> func_def .)


state 23

    (35) func_decl -> void . ident ( params ) pairs SEMI
    (37) func_decl -> void . ident ( types ) pairs SEMI
    (40) func_def -> void . ident ( params ) pairs statements
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 42

state 24

    (64) type -> typestr .
    (62) typestr -> typestr . DOUBLE_COLON ident

  ! shift/reduce conflict for DOUBLE_COLON resolved as shift
    STAR            reduce using rule 64 (type -> typestr .)
    IDENT           reduce using rule 64 (type -> typestr .)
    ,               reduce using rule 64 (type -> typestr .)
    )               reduce using rule 64 (type -> typestr .)
    DOT             reduce using rule 64 (type -> typestr .)
    [               reduce using rule 64 (type -> typestr .)
    SLASH           reduce using rule 64 (type -> typestr .)
    MOD             reduce using rule 64 (type -> typestr .)
    PLUS            reduce using rule 64 (type -> typestr .)
    DASH            reduce using rule 64 (type -> typestr .)
    LT              reduce using rule 64 (type -> typestr .)
    GT              reduce using rule 64 (type -> typestr .)
    LE              reduce using rule 64 (type -> typestr .)
    GE              reduce using rule 64 (type -> typestr .)
    EQ              reduce using rule 64 (type -> typestr .)
    NE              reduce using rule 64 (type -> typestr .)
    AND             reduce using rule 64 (type -> typestr .)
    OR              reduce using rule 64 (type -> typestr .)
    RIGHTSHIFT      reduce using rule 64 (type -> typestr .)
    LEFTSHIFT       reduce using rule 64 (type -> typestr .)
    SEMI            reduce using rule 64 (type -> typestr .)
    ]               reduce using rule 64 (type -> typestr .)
    ASSIGN          reduce using rule 64 (type -> typestr .)
    AMP             reduce using rule 64 (type -> typestr .)
    DOUBLE_COLON    shift and go to state 43

  ! DOUBLE_COLON    [ reduce using rule 64 (type -> typestr .) ]


state 25

    (65) void -> VOID .

    IDENT           reduce using rule 65 (void -> VOID .)


state 26

    (72) ident -> IDENT .

    DOUBLE_COLON    reduce using rule 72 (ident -> IDENT .)
    STAR            reduce using rule 72 (ident -> IDENT .)
    IDENT           reduce using rule 72 (ident -> IDENT .)
    ASSIGN          reduce using rule 72 (ident -> IDENT .)
    (               reduce using rule 72 (ident -> IDENT .)
    ,               reduce using rule 72 (ident -> IDENT .)
    SEMI            reduce using rule 72 (ident -> IDENT .)
    :               reduce using rule 72 (ident -> IDENT .)
    DOT             reduce using rule 72 (ident -> IDENT .)
    [               reduce using rule 72 (ident -> IDENT .)
    SLASH           reduce using rule 72 (ident -> IDENT .)
    MOD             reduce using rule 72 (ident -> IDENT .)
    PLUS            reduce using rule 72 (ident -> IDENT .)
    DASH            reduce using rule 72 (ident -> IDENT .)
    LT              reduce using rule 72 (ident -> IDENT .)
    GT              reduce using rule 72 (ident -> IDENT .)
    LE              reduce using rule 72 (ident -> IDENT .)
    GE              reduce using rule 72 (ident -> IDENT .)
    EQ              reduce using rule 72 (ident -> IDENT .)
    NE              reduce using rule 72 (ident -> IDENT .)
    AND             reduce using rule 72 (ident -> IDENT .)
    OR              reduce using rule 72 (ident -> IDENT .)
    RIGHTSHIFT      reduce using rule 72 (ident -> IDENT .)
    LEFTSHIFT       reduce using rule 72 (ident -> IDENT .)
    )               reduce using rule 72 (ident -> IDENT .)
    ]               reduce using rule 72 (ident -> IDENT .)
    AMP             reduce using rule 72 (ident -> IDENT .)
    =               reduce using rule 72 (ident -> IDENT .)
    }               reduce using rule 72 (ident -> IDENT .)
    {               reduce using rule 72 (ident -> IDENT .)
    PROTOCOL        reduce using rule 72 (ident -> IDENT .)
    INCLUDE         reduce using rule 72 (ident -> IDENT .)
    MACHINE         reduce using rule 72 (ident -> IDENT .)
    ACTION          reduce using rule 72 (ident -> IDENT .)
    IN_PORT         reduce using rule 72 (ident -> IDENT .)
    OUT_PORT        reduce using rule 72 (ident -> IDENT .)
    TRANS           reduce using rule 72 (ident -> IDENT .)
    EXTERN_TYPE     reduce using rule 72 (ident -> IDENT .)
    GLOBAL          reduce using rule 72 (ident -> IDENT .)
    STRUCT          reduce using rule 72 (ident -> IDENT .)
    ENUM            reduce using rule 72 (ident -> IDENT .)
    STATE_DECL      reduce using rule 72 (ident -> IDENT .)
    VOID            reduce using rule 72 (ident -> IDENT .)
    $end            reduce using rule 72 (ident -> IDENT .)


state 27

    (4) declsx -> decl declsx .

    $end            reduce using rule 4 (declsx -> decl declsx .)
    }               reduce using rule 4 (declsx -> decl declsx .)


state 28

    (6) decl -> PROTOCOL STRING . exprs SEMI
    (87) exprs -> . expr , exprs
    (88) exprs -> . expr
    (89) exprs -> . empty
    (121) expr -> . aexpr
    (122) expr -> . expr STAR expr
    (123) expr -> . expr SLASH expr
    (124) expr -> . expr MOD expr
    (125) expr -> . expr PLUS expr
    (126) expr -> . expr DASH expr
    (127) expr -> . expr LT expr
    (128) expr -> . expr GT expr
    (129) expr -> . expr LE expr
    (130) expr -> . expr GE expr
    (131) expr -> . expr EQ expr
    (132) expr -> . expr NE expr
    (133) expr -> . expr AND expr
    (134) expr -> . expr OR expr
    (135) expr -> . expr RIGHTSHIFT expr
    (136) expr -> . expr LEFTSHIFT expr
    (137) expr -> . NOT expr
    (138) expr -> . INCR expr
    (139) expr -> . DECR expr
    (140) expr -> . DASH expr
    (2) empty -> .
    (108) aexpr -> . STATIC_CAST ( type , expr )
    (109) aexpr -> . STATIC_CAST ( type , STRING , expr )
    (110) aexpr -> . var
    (111) aexpr -> . type ident
    (112) aexpr -> . literal
    (113) aexpr -> . enumeration
    (114) aexpr -> . ident ( exprs )
    (115) aexpr -> . NEW type
    (116) aexpr -> . OOD
    (117) aexpr -> . aexpr DOT ident
    (118) aexpr -> . aexpr DOT ident ( exprs )
    (119) aexpr -> . aexpr [ exprs ]
    (120) aexpr -> . type DOUBLE_COLON ident ( exprs )
    (141) aexpr -> . ( expr )
    (142) aexpr -> . IS_VALID ( expr )
    (143) aexpr -> . IS_INVALID ( expr )
    (149) var -> . ident
    (64) type -> . typestr
    (144) literal -> . STRING
    (145) literal -> . NUMBER
    (146) literal -> . FLOATNUMBER
    (147) literal -> . LIT_BOOL
    (148) enumeration -> . ident : ident
    (72) ident -> . IDENT
    (62) typestr -> . typestr DOUBLE_COLON ident
    (63) typestr -> . ident

    NOT             shift and go to state 50
    INCR            shift and go to state 51
    DECR            shift and go to state 52
    DASH            shift and go to state 49
    SEMI            reduce using rule 2 (empty -> .)
    STATIC_CAST     shift and go to state 53
    NEW             shift and go to state 60
    OOD             shift and go to state 61
    (               shift and go to state 54
    IS_VALID        shift and go to state 62
    IS_INVALID      shift and go to state 63
    STRING          shift and go to state 44
    NUMBER          shift and go to state 64
    FLOATNUMBER     shift and go to state 65
    LIT_BOOL        shift and go to state 66
    IDENT           shift and go to state 26

    exprs                          shift and go to state 45
    expr                           shift and go to state 46
    empty                          shift and go to state 47
    aexpr                          shift and go to state 48
    type                           shift and go to state 55
    var                            shift and go to state 56
    ident                          shift and go to state 57
    literal                        shift and go to state 58
    enumeration                    shift and go to state 59
    typestr                        shift and go to state 24

state 29

    (7) decl -> INCLUDE STRING . SEMI

    SEMI            shift and go to state 67


state 30

    (8) decl -> MACHINE ( . enumeration ) : obj_decls { decls }
    (9) decl -> MACHINE ( . enumeration pairs ) : obj_decls { decls }
    (148) enumeration -> . ident : ident
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    enumeration                    shift and go to state 68
    ident                          shift and go to state 69

state 31

    (10) decl -> ACTION ( . ident pairs ) statements
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 70

state 32

    (11) decl -> IN_PORT ( . ident , type , var pairs ) statements
    (72) ident -> . IDENT

    IDENT           shift and go to state 26

    ident                          shift and go to state 71

state 33

    (30) obj_decl -> type ident . pairs SEMI
    (32) obj_decl -> type ident . ASSIGN expr SEMI
    (36) func_decl -> type ident . ( params ) pairs SEMI
    (38) func_decl -> type ident . ( types ) pairs SEMI
    (41) func_def -> type ident . ( params ) pairs statements
    (75) pairs -> . , pairsx
    (76) pairs -> . empty
    (2) empty -> .

    ASSIGN          shift and go to state 73
    (               shift and go to state 74
    ,               shift and go to state 75
    SEMI            reduce using rule 2 (empty -> .)
